@@ -555,6 +555,16 @@ extern void __execve_exit(int return_code);
 
 /****************************************************************************/
 
+/*
+ * The unlink() and remove() functions in libunix.a may return success even
+ * though deletion failed because the file/directory/link in question is still
+ * reported as being "in use". This is the default behaviour. If you want the
+ * deletion to fail instead, set '__unlink_retries' to FALSE.
+ */
+extern BOOL __unlink_retries;
+
+/****************************************************************************/
+
 #ifdef __cplusplus
 }
 #endif /* __cplusplus */
