@@ -122,6 +122,7 @@ UNIX_LIB := \
 	unistd_ttyname_r.o \
 	unistd_unix_path_semantics.o \
 	unistd_unlink.o \
+	unistd_unlink_retries.o \
 	unistd_wildcard_expand.o \
 	utime_utime.o
 
