@@ -37,59 +37,4 @@
 
 /****************************************************************************/
 
-#ifndef _STDLIB_CONSTRUCTOR_H
-#include "stdlib_constructor.h"
-#endif /* _STDLIB_CONSTRUCTOR_H */
-
-/****************************************************************************/
-
-/* Names of files and directories to delete when shutting down. */
-struct MinList			NOCOMMON __unlink_list;
-struct SignalSemaphore	NOCOMMON __unlink_semaphore;
-
-/****************************************************************************/
-
-CLIB_CONSTRUCTOR(unistd_init)
-{
-	ENTER();
-
-	NewList((struct List *)&__unlink_list);
-	InitSemaphore(&__unlink_semaphore);
-
-	LEAVE();
-
-	CONSTRUCTOR_SUCCEED();
-}
-
-/****************************************************************************/
-
-CLIB_DESTRUCTOR(unistd_exit)
-{
-	ENTER();
-
-	PROFILE_OFF();
-
-	if(__unlink_list.mlh_Head != NULL && NOT IsListEmpty((struct List *)&__unlink_list))
-	{
-		struct UnlinkNode * uln;
-		BPTR old_dir;
-
-		/* Close all the files that still might be open. */
-		__close_all_files();
-
-		while((uln = (struct UnlinkNode *)RemHead((struct List *)&__unlink_list)))
-		{
-			D(("deleting '%s'",uln->uln_Name));
-
-			old_dir = CurrentDir(uln->uln_Lock);
-			DeleteFile(uln->uln_Name);
-			CurrentDir(old_dir);
-
-			UnLock(uln->uln_Lock);
-		}
-	}
-
-	PROFILE_ON();
-
-	LEAVE();
-}
+BOOL NOCOMMON __unlink_retries = TRUE;
