@@ -1,3 +1,12 @@
+- Unlink is now reentrant, or at least thread-safe.
+
+- You can now make unlink() stop after a failed deletion attempt which
+  failed because the object to be deleted was reported as being "in use".
+  The libunix.a variant defaults to report the deletion to have succeeded
+  under these circumstances and later tries to delete the files marked
+  for deletion. See <dos.h> for a brief documentation of how to change
+  the behaviour.
+
 - basename() and dirname() can no longer return NULL. They truncate the
   resulting path name instead. This is done so because some code that
   calls basename() or dirname() does not check if the function's return
